# udl

./: .gitignore  README.md  pyproject.toml
scripts/: run_civic_paper.py  run_mnist_lastlayer_paper.py  run_mnist_paper.py
src/udl/al_civic_evidence/: acquisition.py  data.py  legacy_civic.py  runner.py  train_eval.py
src/udl/al_mnis_analytic/: covariances.py  posterior.py  runner.py
src/udl/al_mnist/: acquisition.py  data.py  model.py  runner.py  train_eval.py
src/udl/utils/: utils.py
