[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "udl"
version = "0.1.0"
description = "UDL"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "accelerate>=1.12.0",
    "black>=25.12.0",
    "datasets>=4.4.2",
    "matplotlib>=3.10.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=11.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/udl"]

